@@ -1,3 +1,5 @@
+- implemented chain operators in Precedence.pm
+
 0.10  2006-07-10
 
 - added Pugs::Runtime::Common - contains utilities shared by all perl 6 
